<resources>
    <string name="app_name">Astrology Application</string>
    <string name="msg_already_know_yo">Already know your sign? Skip</string>
    <string name="msg_there_are_12_zo">There are 12 zodiac signs, and each sign has its own strengths and weaknesses, desires and attitude towards life and people. Analyzing astrology can give us a glimpse of a person\u2019s basic characteristics.</string>
    <string name="lbl_poly_prediction">Poly Prediction</string>
    <string name="lbl_find_my_sign">Find my sign</string>
    <string name="lbl_select_date">Select Date</string>
    <string name="msg_zodiac_signs_ar">Zodiac Signs are based on one\u2019s birth date.To calculate your sign and see your future, use the \u2018Select Date\u2019 button to enter your birthday then click the \u2018ok\u2019 button when you finish. </string>
    <string name="msg_enter_your_birt">Enter your birthday</string>

    <string name="test">Tennis is a racket sport that can be played individually against a single opponent (singles) or between two teams of two players each (doubles). Each player uses a tennis racket that is strung with cord to strike a hollow rubber ball covered with felt over or around a net and into the opponents court. The object of the game is to maneuver the ball in such a way that the opponent is not able to play a valid return. The player who is unable to return the ballwill not gain a point, while the opposite player will. Tennis is an Olympic sport and is played at all levels of society and at all ages. The sport can be played by anyone who can hold a racket, including wheelchair users. The modern game of tennis originated in Birmingham, England, in the late 19th century as lawn tennis. It had close connections both to various field (lawn) games such as croquet and bowls as well as to the older racket sport today called real tennis. During most of the 19th century, in fact,the term tennis referred to real tennis, not lawn tennis. The rules of modern tennis have changed little since the 1890s. Two exceptions are that from 1908 to 1961 the server had to keep one foot on the ground at all times, and the adoption of the tiebreak in the 1970s. A recent addition to professional tennis has been the adoption of electronic review technology coupled with a point-challenge system, which allows a player to contest the line call of a point, a system known as Hawk-Eye.</string>
    <string name="prediction_a">A relationship with someone you have been trying to get close to is finally taking off not in a mad, passionate way, but in a comfortable, pleasant, long lasting way. Have a chat tonight.</string>
    <string name="prediction_b">The Moon will be full when you open your eyes, a heavenly event that can not help but put you in the mood to state a case em dash probably with regard to a business situation em dash with amazing logic and persuasion.></string>
    <string name="prediction_c">The truth about a friend will surface now. That doesn\'t mean it will be a truth you\'re uncomfortable with, or that you\'ll be unhappy with the news. In fact, this is the type of surprise you can definitely live with.</string>
    <string name="prediction_d">If you feel stalled, especially when it comes to a relationship matter, you\'ll have one major consolation: You\'re not alone. That may not make it any easier to deal with, but at least you\'ll be able to commiserate.</string>
    <string name="prediction_e">You\'ve done everything you can in a situation like this. Your mission now is to look forward even as you\'re realizing that there are all kinds of wonderful lessons to be learned from the past.</string>
    <string name="prediction_f">Getting your travel plans together may be easier said than done now, but if you plan and prepare, you\'ll be fine. Be sure that Plan B is ready to put into action at a moment\'s notice.</string>
    <string name="prediction_g">You\'re not usually prone to taking time off, but you can occasionally be persuaded, as you will be now, by a family member who\'s determined to drag you away from duty, even if it\'s just for one evening.</string>
    <string name="prediction_h">Your health and physical appearance are on your mind now, which certainly explains your recent fascination with mirrors. Well, get used to it. The person who\'s made you so self-aware isn\'t going anywhere for a while.</string>
    <string name="prediction_i">Things are at a standstill regarding any joint finances. When you\'re ready em dash and don\'t be in a hurry em dash you should seek out the advice and counsel of someone who legitimately cares about what happens to you.</string>
    <string name="prediction_j">If you don\'t feel comfortable knowing that you\'ve been giving in to a certain person about financial matters, then it\'s time to stop. If anyone is intellectually on top of things, it\'s you. Go with your gut.</string>
    <string name="prediction_k">If you didn\'t get a chance to enjoy the full Moon with someone special, it\'s not too late. You\'ll be especially energetic, so sitting up late for a long, lovely chat won\'t be a problem, especially if it turns romantic.</string>
    <string name="prediction_l">You\'re due for a major epiphany, and it won\'t come to you under ordinary circumstances. A most unusual situation will bring it to you. Pay attention to that little voice in the back of your mind. It\'s never let you down.</string>

</resources>