<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/home_view"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:paddingTop="40dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/img_night_calls"
            android:layout_width="370dp"
            android:layout_height="230dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="1dp"
            android:scaleType="fitXY"
            android:src="@drawable/night_calls"/>

        <TextView
            android:id="@+id/txtPolyPrediction"
            android:ellipsize="end"
            android:gravity="end"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="33dp"
            android:layout_width="match_parent"
            android:lineSpacingExtra="1dp"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:textStyle="bold"
            android:text="@string/lbl_poly_prediction"/>
        <TextView
            android:id="@+id/txtDescription"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="33dp"
            android:layout_width="match_parent"
            android:lineSpacingExtra="10dp"
            android:textColor="#898686"
            android:textStyle="bold"
            android:text="@string/msg_there_are_12_zo"/>
        <Button
            android:id="@+id/btnFindMySign"
            android:ellipsize="end"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="60dp"
            android:lineSpacingExtra="1dp"
            android:paddingBottom="20dp"
            android:paddingEnd="30dp"
            android:paddingStart="30dp"
            android:paddingTop="20dp"
            android:background="@drawable/rounded_corner"
            android:singleLine="true"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:onClick="openSignActivity"
            android:text="@string/lbl_find_my_sign"/>
        <Button
            android:ellipsize="end"
            android:id="@+id/txtalready_know"
            android:layout_gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginEnd="22dp"
            android:layout_marginStart="22dp"
            android:layout_marginTop="60dp"
            android:layout_width="wrap_content"
            android:lineSpacingExtra="1dp"
            android:backgroundTint="@color/white"
            style="?borderlessButtonStyle"
            android:singleLine="true"
            android:textColor="#F0BA0D"
            android:textSize="12dp"
            android:textStyle="bold"
            android:onClick="openDateActivity"
            android:text="@string/msg_already_know_yo"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
